Fix image stretching and add word-breaking

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ main {
 }
 
 code.language-plaintext {
+	word-break: break-word;
 	background: rgba(255, 255, 255, 0.05);
 	border-radius: 5px;
 	border-width: 1px;
@@ -107,6 +108,7 @@ img {
 	margin-right: auto;
 	max-width: 100%;
 	max-height: 100%;
+	height: 100%;
 	border-radius: 8px;
 }
 
